# JUN2025-MCP-Workshop

./: .pre-commit-config.yaml  LICENSE  README.md
src/: README.md  pyproject.toml  requirements.txt
src/local_infra/: README.md  docker-compose.yml  run_ollama.sh
src/mcp_workshop/: env.py  list_mcp_content.py  mcp_server.py
src/mcp_workshop/utils/: fs.py  postgres.py
